[project]
name = "primordial-byte"
version = "0.1.0"
description = "Emergence of self-replicating programs from random interaction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "brotli>=1.2.0",
    "rich>=14.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["primordial_byte"]